app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  sessionAffinity: None
  selector:
    app: petclinic
