app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  to:
    kind: Service
    name: petclinic
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
